--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,6 +4,7 @@
         Article One | Jatan Baid
         
     </title>
+    <meta name="viewport" content="width-device-width.intial-scale=1" >
 </head>
 <body>
     <div>
