[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,7 +6,10 @@
     </title>
     <style>
         .container{
-            
+            max-width:800px;
+            margin:0 auto;
+            color:blue; 
+            font-family:sans-serif;
         }
     </style>
     <meta name="viewport" content="width-device-width.intial-scale=1" >
