--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,10 +6,12 @@
     </title>
     <style>
         .container{
-            max-width:800px;
-            margin:0 auto;
-            color:blue; 
-            font-family:sans-serif;
+            max-width: 800px;
+            margin: 0 auto;
+            color: #7e7ed2;
+            font-family: sans-serif;
+            padding-left: 20px;
+            padding-right: 20px;
         }
     </style>
     <meta name="viewport" content="width-device-width.intial-scale=1" >
