--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,16 +4,7 @@
         Article One | Jatan Baid
         
     </title>
-    <style>
-        .container{
-            max-width: 800px;
-            margin: 0 auto;
-            color: #7e7ed2;
-            font-family: sans-serif;
-            padding-left: 20px;
-            padding-right: 20px;
-        }
-    </style>
+    <link href="/ui/style.css" rel="stylesheet" />
     <meta name="viewport" content="width-device-width.intial-scale=1" >
 </head>
 <body>
