--- a/ui/index.html
+++ b/ui/index.html
@@ -4,16 +4,19 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img id="madi" src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div id="main-text" class="center text-big bold">
-            Hi! I am your webapp.
-        </div>
-        <script>
-            alert('Hi I am Jatan');
-        </script>
+        <div class="container">
+            <div class="center">
+                <img id="madi" src="C:\Users\Jatan\Pictures\16729041_1148308165280403_7385999465768612760_n" class="img-medium"/>
+            </div>
+            <div>
+                <h3>Personal</h3>
+            </div> 
+            <br>
+            <div id="main-text" class="center text-big bold">
+                Hi! I am your webapp.
+            </div>
+        </div>    
+        
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
