[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,7 +13,11 @@
             </div> 
             <br>
             <div id="main-text" class="center text-big bold">
-                Hi! I am your webapp.
+                Hi.I am Jatan
+            </div>
+            <hr>
+            <div>
+                I work at hasura.
             </div>
         </div>    
         
