--- a/ui/index.html
+++ b/ui/index.html
@@ -19,6 +19,9 @@
             <div>
                 I work at hasura.
             </div>
+            <div class="footer" >
+                This button<button id="counter">Click me!</button>has been clicked<span id="count">0</span>times.
+            </div>
         </div>    
         
         <script type="text/javascript" src="/ui/main.js">
